# zephyrproject

./: README.md
zephyr-mqtt-cpp-publisher/: .gitignore  CMakeLists.txt  README.md  prj.conf
zephyr-mqtt-cpp-publisher/scripts/: 1-setup-workspace.sh  2-start-networking.sh  3-start-broker.sh  4-build-and-run.sh
zephyr-mqtt-cpp-publisher/src/: app_config.h  main.cpp  mqtt_publisher.cpp  mqtt_publisher.hpp
